--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,5 +6,13 @@ body {
     background-size: cover;
     -o-background-size: cover;
 }
+.image-home
+{ height:200px;
+}
+.image2  {
 
+    width: 200px !important;
 
+height:auto;
+
+}
