--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,7 +31,7 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="btn btn-lg btn-success" type="submit">
         Log in
     </button>
 
