--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -31,6 +31,7 @@
     <a href="/register" class="btn btn-lg btn-success">Registeren</a>
     <a href="/login" class="btn btn-lg btn-success">Login</a>
     <a href="/blog3" class="btn btn-lg btn-success">Blogs</a>
+    <a class="btn btn-lg btn-success" href="{{ path('app_logout') }}">Log uit</a>
 
 
 
